# gaud-erp-migration

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_phase1_phase2_integration.py  test_phase1_real_api.py
.cache/schemas/: schema_602fef8e.json
src/api/: data_importer.py  endpoint_mapper.py  gaud_client.py
src/builder/: __init__.py  field_builder.py  payload_builder.py  template_engine.py
src/cli/: interactive.py  table_selector.py
src/exporter/: json_exporter.py
src/introspection/: __init__.py  api_schema_introspector.py  schema_analyzer.py
src/mapper/: heuristic.py  mapping.py
src/parser/: access_parser.py  backup_parser.py  csv_parser.py  dialect_detector.py  excel_parser.py  parser_factory.py  sql_parser.py
src/schema/: models.py
src/transformer/: registry.py
src/validator/: data_validator.py
tests/: test_endpoint_mapper.py  test_introspection.py  test_parsers_phase2.py  test_payload_builder.py
