[tool.poetry]
name = "gaud-erp-migration"
version = "0.2.0"
description = "Interactive CLI tool for migrating customer databases to GAUD ERP"
authors = ["Felipe Espitalher <felipe.espitalher@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/felipeespitalher/gaud-erp-migration"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyyaml = "^6.0"
sqlparse = "^0.4.4"
pandas = "^2.0.3"
jinja2 = "^3.1.2"
colorama = "^0.4.6"
pydantic = "^2.0.3"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
questionary = "^1.10.0"
openpyxl = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[tool.poetry.scripts]
gaud-migration = "main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
